# UVMCC-Discord-Bot

./: .gitignore  Procfile  README.md  auth.py  bot.py  keep_alive.py  main.py  pyproject.toml  reconstruct_database.py  requirements.txt  simple_bot.py  speech_recognition_test.py  tests.py  users.db
discord/: __init__.py  errors.py  gateway.py  opus.py  player.py  reader.py  utils.py  voice_client.py
