[tool.poetry]
name = "repl_python3_Lichess-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
imgkit = "^1.2.2"
# wkhtmltopdf = "^0.2"
pyppeteer = "^0.2.5"
python-chess = "^1.999"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
